package flights_manager.client_handle;

public interface FlightObserver {
    void update(String message);
}
