package flights_manager.search_strategies;

public enum SearchMethod {
    BY_DATE,
    BY_DESTINATION,
    BY_PRICE
}
